2009-03-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/FIBO.hh, FIBO.cc (FIBO::clear, FIBO::nextBlockNoClear):
	New member functions.

	* port.cc (MessageInputPort::mapImpl): Give correct routing
	information in the indexMap.

	* music/port.hh, port.cc (MessageInputPort::map): Cover all
	argument combinations.

	* music/index_map.hh, index_map.cc (Index::WILDCARD_MAX): New
	member.

	* spatial.cc: Accept wild card indices on receiver side.

	* subconnector.cc (EventInputSubconnectorGlobal::receive,
	EventInputSubconnectorLocal::receive,
	MessageInputSubconnector::receive): Define `data' as vector of
	char, not vector of char*.

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3
	
	* setup.cc: #include "config.h"

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/temporal.hh, temporal.cc
	(class TemporalNegotiator,
	TemporalNegotiator::createNegotiationCommunicator,
	TemporalNegotiator::~TemporalNegotiator): Keep handles to MPI
	groups throughout communication.

	* runtime.cc (Runtime::finalize): Call Connector::freeIntercomm
	(); Include a barrier call to make freeing work under OpenMPI.

	* music/connector.hh, connector.cc (Connector::freeIntercomm): New
	member function.

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

	* version.cc: Updated to version 1.0.2.

2009-03-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.cc: Conditionally delete temporalNegotiator.

	* music/port.hh
	(OutputRedistributionPort::OutputRedistributionPort,
	InputRedistributionPort::InputRedistributionPort): New
	constructors: Initialize spatialNegotiator to NULL pointer.

	* port.cc (OutputRedistributionPort::setupCleanup,
	InputRedistributionPort::setupCleanup): Conditionally delete
	spatialNegotiator.  (It has not been allocated if the port has not
	been mapped.)

	* music/BIFO.hh, music/clock.hh, music/connector.hh,
	music/subconnector.hh, music/synchronizer.hh, music/temporal.hh,